--- a/JS_site/style.css
+++ b/JS_site/style.css
@@ -1,3 +1,5 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playwrite+US+Trad+Guides&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');*/
+
 html,
 body,
 main {
@@ -9,11 +11,11 @@ main {
 body {
     display: flex;
     flex-direction: column;
-    background-color: #000000;
+    background-color: rgb(80, 76, 134);;
 }
 
 .fond_nom_site {
-    background-image: linear-gradient(to left, #7a2c2c, #8f2424);
+    background-color: rgb(80, 76, 134);
     padding: 20px;
 }
 
@@ -23,7 +25,7 @@ p {
 
 /*Nav*/
 .navigation {
-    background-color: rgb(80, 76, 134);
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     display: flex;
     justify-content: flex-end;
@@ -72,8 +74,8 @@ p {
     text-align: center;
 }
 
-/* contenu principale*/
 
+/* contenu principal*/
 
 .container {
     display: flex;
@@ -85,27 +87,69 @@ p {
     padding: 10px;
     height: 100%;
     width: 100%;
-    background-color: rgb(134, 129, 158);
+    background-color: rgb(255, 255, 255);
 }
 
-.text_trip {
-    background-color: rgb(228, 8, 8);
+
+.texte_trip {
+    /*background-color: rgb(120, 120, 120);*/
     width: 50%;
-    color: white;
+    color: #000000;
 }
 
 
 .photo_trip {
-    background-color: rgb(124, 60, 60);
+   /* background-color: rgb(124, 60, 60);*/
     width: 50%;
-    color: white;
+    color: #000000;
 }
+
 
 /*bas de page*/
 .footer {
-    background-color: rgb(27, 110, 55);
+    background-color: rgb(80, 76, 134);
     padding: 10px;
     margin-top: auto;
     width: 100%;
-    color: rgb(212, 0, 0);
 }
+
+/*Dropdown*/
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+/*end dropdown*/
