--- a/JS_site/style.css
+++ b/JS_site/style.css
@@ -25,7 +25,7 @@ p {
 
 /*Nav*/
 .navigation {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(126, 126, 126);
     padding: 20px;
     display: flex;
     justify-content: flex-end;
@@ -69,7 +69,7 @@ p {
     padding: 10px;
     width: 100%;
     border-width: 1px;
-    color: white;
+    color: #ffffff;
     border-style: solid;
     text-align: center;
 }
@@ -87,7 +87,7 @@ p {
     padding: 10px;
     height: 100%;
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(92, 92, 92);
 }
 
 
